--- a/index.html
+++ b/index.html
@@ -3,5 +3,8 @@
     <h1>
       Welcome to sunsoft technologies
     </h1>
+    <h2>
+      <a href="login.html"> Login</a>
+    </h2>
   </body>
 </html>
