--- a/login.html
+++ b/login.html
@@ -2,7 +2,7 @@
   <body>
     <h1>please login</h1>
     <hr>
-    <form action="">
+    <form action="welcome.html">
       <h3>
         Username <input type="text" name="uname"><br>
         Password:<input type="password" name="password"><br>
